# agentic-vnstock

./: .gitignore  AgenticVNStock_Tutorial.ipynb  README.md  pyproject.toml  test_api.py  test_api2.py  test_api3.py
src/agentic_vnstock/: __init__.py  cli.py  client.py
src/agentic_vnstock/agents/: base_agent.py
src/agentic_vnstock/tools/: market_data.py
tests/scripts/: test_api.py  test_news.py  test_tcbs_news.py
